--- a/projects/practice/functions/index.html
+++ b/projects/practice/functions/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <meta name=""viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Document</title>
         <script src="functions.js"></script>
     </head>
