o-bang clone coding study

--- a/projects/youtube(clone)/index.html
+++ b/projects/youtube(clone)/index.html
@@ -59,9 +59,7 @@
     <section class="player">
         <video controls src="video/sample_video_01.mov"></video>
     </section>
-
-
-
+    <!-- Info And UpNext -->
     <div class="infoAndUpNext">
             <!-- Video Info -->
     <section class="info">
