js async learning

--- a/projects/JS_practice/index.html
+++ b/projects/JS_practice/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <script src="json.js"></script> <!--스크립트를 헤드에 포함하지 말 것, 페이지 로딩이 늦다.-->
+        <script src="async/async.js"></script> <!--스크립트를 헤드에 포함하지 말 것, 페이지 로딩이 늦다.-->
     </head>
     <body>
         <!--<script src="main.js"></script> /*HTML을 파싱한 뒤에 js를 받아옴*/-->
