--- a/projects/o-bang(clone)/index.html
+++ b/projects/o-bang(clone)/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>오늘의 방역  | 오늘 지켜야 할 코로나 방역수칙</title>
+    <title>오늘의 방역 | 오늘 지켜야 할 코로나 방역수칙</title>
     <meta name="description" content="보건복지부에서 공식 제공하는 최신 코로나 방역수칙을 매일 매일 업데이트합니다.">
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
     <!-- header -->
     <div class="header">
         <div class="title">
-            <span class="title">오늘의 방역</span>
+            <p class="titleName">오늘의 방역</p>
         </div>
         <div class="reference">
             <a href="http://ncov.mohw.go.kr/" target="_blank" rel="noopener noreferrer">출처 - 보건복지부 보도자료</a>
@@ -213,7 +215,8 @@
 
     <!-- footer -->
     <footer>
-        <p>본 사이트에서 제공하는 방역수칙 정보는 대한민국 질병관리 본부 및 관련 부처 보도자료, 언론 기사 등을 토대로 업데이트 되지만, 개인이 취합한 내용이므로 정보의 정확성에 대해 책임질 수 없으며, 공식적인 근거 자료로 활용될 수 없습니다. 본 사이트에서 제공하는 내용의 인용과 사용에 대한 책임은 전적으로 인용자 및 사용자에게 있음을 알립니다.</p>
+        <p>본 사이트에서 제공하는 방역수칙 정보는 대한민국 질병관리 본부 및 관련 부처 보도자료, 언론 기사 등을 토대로 업데이트 되지만, 개인이 취합한 내용이므로 정보의 정확성에 대해 책임질 수 없으며,
+            공식적인 근거 자료로 활용될 수 없습니다. 본 사이트에서 제공하는 내용의 인용과 사용에 대한 책임은 전적으로 인용자 및 사용자에게 있음을 알립니다.</p>
         <p class="logo">
             BY 오늘의 방역
         </p>
@@ -226,4 +229,5 @@
         </button>
     </div>
 </body>
+
 </html>
