10000hours code review & refactoring

--- a/projects/JS_Lecture/index.html
+++ b/projects/JS_Lecture/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     <section id="contents">
         <div class="wrapper">
             <div class="title">
-                <img src="img/clock.png" alt="background_logo" class="clock_img">
+                <img src="img/clock.png" alt="" class="clock_img">
                 <div class="title_img">
                     <img src="img/title.png" alt="1만 시간의 법칙">
                 </div>
@@ -108,7 +108,9 @@
         </div>
         <p>
             ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br>
-            수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
+            수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.<br>
+            <!-- 임의로 추가한 라인 -->
+            해당 사이트는 <span>제주코딩베이스캠프의 강의</span>로 <span>Khakhid</span>에 의해 제작되었습니다.
         </p>
     </footer>
     <script type="text/javascript" src="js/10000hours.js"></script>
