--- a/projects/JS_Lecture/index.html
+++ b/projects/JS_Lecture/index.html
@@ -28,7 +28,7 @@
                 <div class="intro_saying">"연습은 어제의 당신보다 당신을 더 낫게 만든다."</div>
                 <div class="explain">
                     <div class="quotes">
-                        <img src="img/quotes.png" alt="따옴표">
+                        <img src="img/quotes.png" alt="">
                     </div>
                     <p>
                         <span>1만 시간의 법칙</span>
@@ -46,17 +46,15 @@
                 </div>
                 <div class="time">
                     <p>그래서 앞으로 매일 하루에</p>
-                    <div>
-                        <input type="number" id="time_value" placeholder="예)5">
-                        <p>시간씩 훈련할 것이다.</p>
-                    </div>
+                    <input type="number" id="time_value" placeholder="예)5">
+                    <p>시간씩 훈련할 것이다.</p>
                 </div>
             </div>
             <div class="start">
                 <div class="btn_wrap">
                     <button class="start_btn">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
                     <div class="click_img">
-                        <img src="img/click.png" alt="click_img">
+                        <img src="img/click.png" alt="">
                     </div>
                 </div>
             </div>
@@ -93,7 +91,7 @@
                 <h3>당신의 꿈을 응원합니다!</h3>
             </div>
             <div class="licat_img">
-                <img src="img/licat.png" alt="라이캣 응원">
+                <img src="img/licat.png" alt="응원하는 라이캣">
             </div>
             <div class="btn">
                 <button class="close_btn">종료하고 진짜 훈련하러 가기 GO!GO!</button>
