쿵쿵따 초기화면 CSS

--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/koongkoongta.css">
 </head>
@@ -18,27 +19,27 @@
     <header id="header">
         <div class="header_wrapper">
             <div class="title">
-                <p>끝말잇기 게임</p>
+                <p>끝말잇기 게임,</p>
             </div>
             <div class="titleName">
-                <p>공포의 쿵쿵따!</p>
+                <p>공포의 쿵쿵따</p>
             </div>
         </div>
     </header>
     <!-- contents -->
     <div class="inputs">
         <div class="inputs_title">
-            <p>규칙 설정하기</p>
+            <p>규칙을 정해주세요</p>
         </div>
         <div class="nop">
-            <p>인원 수는</p>
-            <input type="number" id="nop_value" placeholder="2">
-            <p>명 입니다.</p>
+            <p>플레이 인원 수</p>
+            <input type="number" id="nop_value" placeholder="예)2">
+            <p>명,</p>
         </div>
         <div class="wordLength">
-            <p>글자 수는</p>
-            <input type="number" id="nop_value" placeholder="3">
-            <p>글자 입니다.</p>
+            <p>단어 글자 수</p>
+            <input type="number" id="nop_value" placeholder="예)3">
+            <p>글자</p>
         </div>
     </div>
     <div class="start">
@@ -48,16 +49,18 @@
     </div>
     <div class="start_loading">
         <div class="img_wrap">
-            <img src="img/loading.png" alt="로딩 중">
+            <!-- <img src="img/loading.png" alt="로딩 중"> -->
         </div>
     </div>
     <!-- footer -->
     <footer id="copyright">
         <div class="logo_img">
-            <img src="img/logo.png" alt="khakhid_logo">
+            <img src="img/logo2.png" alt="khakhid_logo">
         </div>
         <p>
-            ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 KhakhiD에게 있습니다.<br>
+            ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은
+            <span><a href=https://github.com/khakhid target="_blank">khakhiD</a></span>
+            에게 있습니다.<br>
             수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.<br>
         </p>
     </footer>
