공포의 쿵쿵따 css

--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>끝말잇기 게임, 쿵쿵따</title>
+    <title>공포의 쿵쿵따</title>
     <meta name="description" content="쿵쿵따 게임 포트폴리오">
     <meta http-equiv="Author" content="KhakhiD">
     <meta charset="UTF-8">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/koongkoongta.css">
+    <link rel="stylesheet" href="./css/animation.css">
 </head>
 
 <body>
@@ -19,17 +20,20 @@
     <header id="header">
         <div class="header_wrapper">
             <div class="title">
-                <p>끝말잇기 게임,</p>
+                <p>돌아온 끝말잇기 게임,</p>
             </div>
             <div class="titleName">
-                <p>공포의 쿵쿵따</p>
+                <p>
+                    <span>공</span><span>포</span><span>의</span>
+                    <span>쿵</span><span>쿵</span><span>따</span><span>!</span>
+                </p>
             </div>
         </div>
     </header>
     <!-- contents -->
     <div class="inputs">
         <div class="inputs_title">
-            <p>규칙을 정해주세요</p>
+            <p>규칙을 정해주세요.</p>
         </div>
         <div class="nop">
             <p>플레이 인원 수</p>
