--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -68,6 +68,7 @@
             수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.<br>
         </p>
     </footer>
+    <script src="./src/main.js" defer></script>
 </body>
 
 </html>
