--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="wordLength">
             <p>단어 글자 수</p>
-            <input type="number" id="nop_value" placeholder="예)3">
+            <input type="number" id="wordLength_value" placeholder="예)3">
             <p>글자</p>
         </div>
     </div>
@@ -54,6 +54,12 @@
     <div class="start_loading">
         <div class="img_wrap">
             <!-- <img src="img/loading.png" alt="로딩 중"> -->
+        </div>
+    </div>
+    <!-- result -->
+    <div class="playWindow">
+        <div class="playWrap">
+            플레이창
         </div>
     </div>
     <!-- footer -->
