koongkoongta on progress

--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -45,19 +45,20 @@
             <input type="number" id="wordLength_value" placeholder="예)3">
             <p>글자</p>
         </div>
+        <div class="announce">
+            <p>
+                ※ 인원 수는 최소 2명 최대 4명,<br>
+                단어 수는 최대 6글자 이하만 가능합니다.
+            </p>
+        </div>
     </div>
     <div class="start">
         <div class="btn_wrapper">
             <button class="start_btn">게임 시작하기</button>
         </div>
     </div>
-    <div class="start_loading">
-        <div class="img_wrap">
-            <!-- <img src="img/loading.png" alt="로딩 중"> -->
-        </div>
-    </div>
-    <!-- result -->
-    <div class="playWindow">
+    <!-- playWindow -->
+    <div class="playWindow" style="display: none">
         <div class="playWrap">
             플레이창
         </div>
@@ -72,6 +73,7 @@
             <span><a href=https://github.com/khakhid target="_blank">khakhiD</a></span>
             에게 있습니다.<br>
             수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.<br>
+            본 사이트는 최소 400x860 해상도에 최적화되어 있습니다.
         </p>
     </footer>
     <script src="./src/main.js" defer></script>
