--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -37,18 +37,23 @@
         </div>
         <div class="nop">
             <p>플레이 인원 수</p>
-            <input type="number" id="nop_value" placeholder="예)2">
+            <input type="number" id="nop_value" placeholder="2">
             <p>명,</p>
         </div>
         <div class="wordLength">
             <p>단어 글자 수</p>
-            <input type="number" id="wordLength_value" placeholder="예)3">
-            <p>글자</p>
+            <input type="number" id="wordLength_value" placeholder="3">
+            <p>글자,</p>
+        </div>
+        <div class="timeLimit">
+            <p>입력 시간 제한</p>
+            <input type="number" id="timeLimit_value" placeholder="10">
+            <p>초</p>
         </div>
         <div class="announce">
             <p>
-                ※ 인원 수는 최소 2명 최대 4명,<br>
-                단어 수는 최대 6글자 이하만 가능합니다.
+                ※ 인원 수는 최대 4명까지, 글자 수는 최대 6글자 단어,<br>
+                입력 시간은 5초 ~ 30초까지 설정할 수 있습니다.
             </p>
         </div>
     </div>
@@ -58,9 +63,17 @@
         </div>
     </div>
     <!-- playWindow -->
-    <div class="playWindow" style="display: none">
-        <div class="playWrap">
-            플레이창
+    <div class="playWindow">
+        <div class="playWindow_title">
+            <p>게임을 시작합니다!</p>
+        </div>
+        <div class="playWindow_rule">
+            <p>설정된 규칙</p>
+        </div>
+        <div class="mainCommand">
+            <p>PLAYER</p><span>1️⃣</span>
+            <input type="text" id="submit" placeholder="단어를 입력하세요.">
+            <button class="submit_btn">ENTER</button>
         </div>
     </div>
     <!-- footer -->
