쿵쿵따 플레이화면 마크업 중간 커밋

--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -64,16 +64,24 @@
     </div>
     <!-- playWindow -->
     <div class="playWindow">
-        <div class="playWindow_title">
-            <p>게임을 시작합니다!</p>
+        <div class="playTop">
+            <div class="playWindow_title">
+                <p>게임을 시작합니다!</p>
+            </div>
+            <div class="playWindow_rule">
+                <p>
+                    플레이어 <span class="ruleNOP"></span>명<br>
+                    <span class="ruleWL"></span>글자 단어<br>
+                    <span class="ruleTL"></span>초 제한
+                </p>
+            </div>
         </div>
-        <div class="playWindow_rule">
-            <p>설정된 규칙</p>
-        </div>
-        <div class="mainCommand">
-            <p>PLAYER</p><span>1️⃣</span>
-            <input type="text" id="submit" placeholder="단어를 입력하세요.">
-            <button class="submit_btn">ENTER</button>
+        <div class="playContent">
+            <div class="mainCommand">
+                <p>PLAYER</p><span>1️⃣</span>
+                <input type="text" id="submit" placeholder="단어를 입력하세요.">
+                <button class="submit_btn">ENTER</button>
+            </div>
         </div>
     </div>
     <!-- footer -->
