--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://kit.fontawesome.com/1e40242dee.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/koongkoongta.css">
@@ -66,7 +66,7 @@
     <div class="playWindow">
         <div class="playTop">
             <div class="playWindow_title">
-                <p>게임을 시작합니다!</p>
+                <p>끝말을 이어주세요!</p>
             </div>
             <div class="playWindow_rule">
                 <p>
@@ -76,12 +76,34 @@
                 </p>
             </div>
         </div>
-        <div class="playContent">
-            <div class="mainCommand">
-                <p>PLAYER</p><span>1️⃣</span>
-                <input type="text" id="submit" placeholder="단어를 입력하세요.">
-                <button class="submit_btn">ENTER</button>
+        <div class="playImg">
+            <div class="playImgWrap">
+                <div class="player1_wrap">
+                    <div class="player1_name">
+                        <p>1</p>
+                    </div>
+                    <div class="player1_img">
+                        <img src="./img/yellow.png" alt="yellow_character">
+                    </div>
+                    <div class="player1_ballon"></div>
+                </div>
+                <div class="player2_wrap">
+                    <div class="player2_name">
+                        <p>2</p>
+                    </div>
+                    <div class="player2_img">
+                        <img src="./img/red.png" alt="red_character">
+                    </div>
+                    <div class="player2_ballon"></div>
+                </div>
             </div>
+        </div>
+    </div>
+    <div class="playContent">
+        <div class="mainCommand">
+            <p>Player</p><span>1</span>
+            <input type="text" id="submit_value" placeholder="단어를 입력하세요.">
+            <button class="submit_btn">ENTER ↲</button>
         </div>
     </div>
     <!-- footer -->
