--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/koongkoongta.css">
     <link rel="stylesheet" href="./css/animation.css">
+    <link rel="stylesheet" href="./css/firstOrder.css">
 </head>
 
 <body>
@@ -62,7 +63,7 @@
             <button class="start_btn">게임 시작하기</button>
         </div>
     </div>
-    <!-- playWindow -->
+    <!-- play Window -->
     <div class="playWindow">
         <div class="playTop">
             <div class="playWindow_title">
@@ -85,7 +86,7 @@
                     <div class="player1_img">
                         <img src="./img/yellow.png" alt="yellow_character">
                     </div>
-                    <div class="player1_ballon"></div>
+                    <div class="player1_balloon"><span class="player1_balloon_text"></span></div>
                 </div>
                 <div class="player2_wrap">
                     <div class="player2_name">
@@ -94,22 +95,35 @@
                     <div class="player2_img">
                         <img src="./img/red.png" alt="red_character">
                     </div>
-                    <div class="player2_ballon"></div>
+                    <div class="player2_balloon"><span class="player2_balloon_text"></span></div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- content Input Window -->
     <div class="playContent">
         <div class="playContent_wrap">
             <div class="mainCommand">
-                <p>Player</p><span>1</span>
-                <input type="text" id="submit_value" autofocus placeholder="단어를 입력하세요.">
-                <button class="submit_btn">ENTER ↲</button>
+                <p>Player</p>
+                <div class="playerNumber">1</div>
+                <input type="text" id="submit_value" autofocus placeholder="제시어를 입력하세요!">
+                <button class="submit_btn">제출</button>
             </div>
             <div class="timeBar">
                 <span class="timeBar_seconds"></span>
                 <div class="timeBar_progress">
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- first Order Window -->
+    <div id="firstOrder">
+        <div class="firstOrder_wrap">
+            <p>📢 첫 제시어를 입력해주세요!</p>
+            <input type="text" id="firstOrder_input" autofocus placeholder="">
+            <div class="firstOrder_buttons">
+                <button class="firstOrder_submitBtn">제출</button>
+                <button class="firstOrder_quitBtn">종료</button>
             </div>
         </div>
     </div>
