--- a/projects/ToyProjects/koongkoongta/index.html
+++ b/projects/ToyProjects/koongkoongta/index.html
@@ -132,10 +132,10 @@
     <div id="modal">
         <div class="modal_wrap">
             <div class="modal_header">
-                    <p class="modal_title"><span class="modal_icon">⛔</span> 경고</p>
+                    <p class="modal_title"><span class="modal_icon"></span> 경고</p>
             </div>
             <div class="modal_content">
-                <span class="modal_text">모달 내용이 들어갑니다.</span>
+                <span class="modal_text">⛔ 모달 내용이 들어갑니다.</span>
             </div>
             <div class="modal_footer">
                 <button class="modal_okayBtn">확인<span>(ENTER)</span></button>
