dashboard_template-complete

--- a/projects/ToyProjects/dashboard/EGATOR/index.html
+++ b/projects/ToyProjects/dashboard/EGATOR/index.html
@@ -150,42 +150,13 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <!-- <tr>
                             <td>Foldable Mini Drone</td>
                             <td>85631</td>
                             <td>Due</td>
                             <td class="warning">Pending</td>
                             <td class="primary">Details</td>
-                        </tr>
-                        <tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
-                            <td class="primary">Details</td>
-                        </tr>
-                        <tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
-                            <td class="primary">Details</td>
-                        </tr>
-                        <tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
-                            <td class="primary">Details</td>
-                        </tr>
-                        <tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
-                            <td class="primary">Details</td>
-                        </tr>
-                    </tbody>
+                        </tr> -->
                 </table>
                 <a href="#">Show All</a>
             </div>
@@ -198,7 +169,7 @@
                 </button>
                 <div class="theme-toggler">
                     <span class="material-icons-sharp active">light_mode</span>
-                    <span class="material-icons-sharp ">dark_mode</span>
+                    <span class="material-icons-sharp">dark_mode</span>
                 </div>
                 <div class="profile">
                     <div class="info">
@@ -297,6 +268,8 @@
             </div>
         </div>
     </div>
+    <!-- orders가 먼저 와야 제대로 불러와진다. -->
+    <script src="./orders.js"></script>
     <script src="./index.js"></script>
 </body>
 
