--- a/projects/ToyProjects/dashboard/EGATOR/index.html
+++ b/projects/ToyProjects/dashboard/EGATOR/index.html
@@ -73,7 +73,7 @@
         <main>
             <h1>Dashboard</h1>
             <div class="date">
-                <input type="date">
+                <input type="date" id="currentDate">
             </div>
 
             <div class="insights">
@@ -202,7 +202,7 @@
                         <div class="message">
                             <p><b>Mike Tyson</b> received his order of
                                 Night lion tech GPS drone.</p>
-                            <small class="text-muted">2 Minutes Ago</small>
+                            <small class="text-muted">3 Hours Ago</small>
                         </div>
                     </div>
                     <div class="update">
@@ -212,7 +212,7 @@
                         <div class="message">
                             <p><b>Mike Tyson</b> received his order of
                                 Night lion tech GPS drone.</p>
-                            <small class="text-muted">2 Minutes Ago</small>
+                            <small class="text-muted">1 Days Ago</small>
                         </div>
                     </div>
                 </div>
