logo-khakhid-change

--- a/projects/ToyProjects/dashboard/EGATOR/index.html
+++ b/projects/ToyProjects/dashboard/EGATOR/index.html
@@ -18,7 +18,7 @@
             <div class="top">
                 <div class="logo">
                     <img src="./images/logo.png" alt="">
-                    <h2>EGA<span class="danger">TOR</span></h2>
+                    <h2>KHA<span class="danger">KHID</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
