--- a/projects/ToyProjects/dashboard/EGATOR/index.html
+++ b/projects/ToyProjects/dashboard/EGATOR/index.html
@@ -190,7 +190,7 @@
                             <img src="./images/profile-2.jpg" alt="">
                         </div>
                         <div class="message">
-                            <p><b>Mike Tyson</b> received his order of
+                            <p><b>Shin Dongho</b> received his order of
                                 Night lion tech GPS drone.</p>
                             <small class="text-muted">2 Minutes Ago</small>
                         </div>
@@ -200,7 +200,7 @@
                             <img src="./images/profile-3.jpg" alt="">
                         </div>
                         <div class="message">
-                            <p><b>Mike Tyson</b> received his order of
+                            <p><b>Kim Doyoung</b> received his order of
                                 Night lion tech GPS drone.</p>
                             <small class="text-muted">3 Hours Ago</small>
                         </div>
@@ -210,7 +210,7 @@
                             <img src="./images/profile-4.jpg" alt="">
                         </div>
                         <div class="message">
-                            <p><b>Mike Tyson</b> received his order of
+                            <p><b>Son Dayeon</b> received his order of
                                 Night lion tech GPS drone.</p>
                             <small class="text-muted">1 Days Ago</small>
                         </div>
