--- a/projects/ToyProjects/dashboard/EGATOR/index.html
+++ b/projects/ToyProjects/dashboard/EGATOR/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="profile">
                     <div class="info">
-                        <p>Hey, <b>Daniel</b></p>
+                        <p>Hey, <b>Dongho</b></p>
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
