--- a/projects/ToyProjects/dashboard/EGATOR/index.html
+++ b/projects/ToyProjects/dashboard/EGATOR/index.html
@@ -17,7 +17,7 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                    <img src="./images/logo.png" alt="">
+                    <img src="./images/sdh_logo.png" alt="">
                     <h2>KHA<span class="danger">KHID</span></h2>
                 </div>
                 <div class="close" id="close-btn">
@@ -26,11 +26,11 @@
             </div>
 
             <div class="sidebar">
-                <a href="#">
+                <a href="#" class="active">
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#" class="active">
+                <a href="#">
                     <span class="material-icons-sharp">person_outline</span>
                     <h3>Cutomers</h3>
                 </a>
