solidraw text change

--- a/projects/ToyProjects/portfolio__1/index.html
+++ b/projects/ToyProjects/portfolio__1/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
+        rel="stylesheet">
     <!-- FONTAWESOME CDN -->
     <script src="https://kit.fontawesome.com/1e40242dee.js" crossorigin="anonymous"></script>
     <!-- STYLESHEET -->
@@ -22,7 +24,7 @@
     <nav>
         <div class="container">
             <a href="#">
-                <h3>~SOLIDRAW-</h3>
+                <h3>SOLIDRAW</h3>
             </a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
@@ -46,11 +48,11 @@
             </div>
             <div class="info">
                 <h1>Handraw to Solidraw</h1>
-                <h3>Welcome, Converters</h3>
+                <h3>솔리드로우로 설계 시간을 줄여보세요!</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam suscipit neque consequuntur, ratione
                     distinctio officiis veritatis commodi quas ex ad recusandae autem aut non quos sed tenetur qui natus
                     nisi.</p>
-                <a href="#contact" class="btn btn-primary">Let's Talk</a>
+                <a href="#contact" class="btn btn-primary">변환하기</a>
             </div>
             <div class="profile-area">
                 <div class="outer-circle">
