--- a/projects/ToyProjects/portfolio__1/index.html
+++ b/projects/ToyProjects/portfolio__1/index.html
@@ -47,8 +47,8 @@
                 <a href="https://github.com/khakhid" target="_blank"><i class="fa fa-github"></i></a>
             </div>
             <div class="info">
-                <h1>Handraw to Solidraw</h1>
-                <h3>솔리드로우로 설계 시간을 줄여보세요!</h3>
+                <h1>Hand to Solid</h1>
+                <h3>솔리드로우로 도면 설계 시간을 줄여보세요.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam suscipit neque consequuntur, ratione
                     distinctio officiis veritatis commodi quas ex ad recusandae autem aut non quos sed tenetur qui natus
                     nisi.</p>
